chore: fix IDE JVM attaching issue for EsUnitTests by allowing self-attach.